# drug_discovery

./: ablation.ipynb  check_data.py  pyproject.toml
configs/: best_model_param.text  job.sh  run.yaml  sweep.yaml  sweep2.yaml  sweep3.yaml  sweep_job.sh
configs/logger/: wandb.yaml
configs/model/: gcn.yaml  mat.yaml  mathilde.yaml  original.yaml  original_norm.yaml  original_norm_skip.yaml
configs/trainer/: semi-supervised-ensemble.yaml
src/: analyze_sweep.py  extract_mse.py  final_results.json  logger.py  models.py  run.py  trainer.py
