[project]
name = "drug-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'importlib-metadata; python_version <= "3.12"',
    "numpy",
    "torch",
    "torchvision",
    "typer",
    "rich",
    "hydra-core",
    "wandb>=0.23.0",
    "pytorch-lightning>=2.5.6",
    "torch-geometric>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
cache-dir = "/dtu/blackhole/0a/224426/.uv_cache"

[tool.uv.pip]
python = "/dtu/blackhole/0a/224426/drug_discovery_env/bin/python"